--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
-name: CI/CD for LEMP Containers
+name: CI/CD LEMP Deployment
 
 on:
   push:
     branches: [ main ]
-    tags:     [ 'v*' ]  # optional: run on version tags, e.g., v1.0.0 #- name: Run backend tests
-                              #  run: python backend/test_app.py
+    tags: [ 'v*' ]   # optional version tags
 
 jobs:
   build-and-push:
@@ -12,19 +11,10 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install backend dependencies
-        run: pip install -r backend/requirements.txt
-
-      
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,11 +25,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Backend image
       - name: Build & push backend
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: backend/Dockerfile
+          context: ./backend
+          file: ./backend/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:latest
@@ -47,11 +38,12 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:latest
           cache-to: type=inline
 
+      # Frontend image
       - name: Build & push frontend
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: frontend/Dockerfile
+          context: ./frontend
+          file: ./frontend/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
@@ -59,78 +51,54 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
           cache-to: type=inline
 
-  
-  copy-init-sql:
-      runs-on: ubuntu-latest
-      needs: build-and-push
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
 
-        - name: Ensure target directory exists on VM
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              cd /
-              sudo mkdir -p /opt/lemp/db/init/
+  copy-files:
+    runs-on: ubuntu-latest
+    needs: build-and-push
 
-        - name: Set permissions for /opt/lemp/db/init/
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              sudo chown -R $(whoami) /opt/lemp/db/init/
-              sudo chmod -R u+w /opt/lemp/db/init/
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Copy init.sql to VM
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            source: db/init/init.sql
-            target: /opt/lemp/db/init/
-            strip_components: 2
+      - name: Prepare /opt/lemp/db/init directory
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            sudo mkdir -p /opt/lemp/db/init
+            sudo chown -R $(whoami) /opt/lemp/db/init
+            sudo chmod -R u+w /opt/lemp/db/init
 
-        
+      - name: Copy init.sql
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: db/init/init.sql
+          target: /opt/lemp/db/init/
 
-        - name: Copy docker-compose.prod.yml to VM
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            source: docker-compose.prod.yml
-            target: /tmp/
+      - name: Copy docker-compose.prod.yml
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: docker-compose.prod.yml
+          target: /opt/lemp/docker-compose.yml
 
-        - name: Move docker-compose.prod.yml to /opt/lemp/ on VM
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              sudo cp /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
-            
 
   deploy:
     runs-on: ubuntu-latest
-    needs: copy-init-sql
-    steps:
-    
-  
+    needs: copy-files
 
-      - name: Deploy to VM via SSH
+    steps:
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -140,13 +108,14 @@ jobs:
           script: |
             set -e
             cd /opt/lemp
-            
-            if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
-              docker-compose down -v
-            else
-              docker-compose down
-            fi
- 
+
+            # Stop running containers
+            docker-compose down || true
+
+            # Pull latest images
             docker-compose pull
+
+            # Start updated stack
             docker-compose up -d
+
             docker-compose ps
