--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
-name: CI/CD LEMP Deployment
+name: CI/CD for LEMP Containers
 
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]   # optional version tags
+    tags:     [ 'v*' ]  # optional: run on version tags, e.g., v1.0.0 #- name: Run backend tests
+                              #  run: python backend/test_app.py
 
 jobs:
   build-and-push:
@@ -11,10 +12,19 @@ jobs:
     permissions:
       contents: read
       packages: write
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install backend dependencies
+        run: pip install -r backend/requirements.txt
+
+      
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -25,12 +35,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Backend image
       - name: Build & push backend
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
-          file: ./backend/Dockerfile
+          context: .
+          file: backend/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:latest
@@ -38,12 +47,11 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:latest
           cache-to: type=inline
 
-      # Frontend image
       - name: Build & push frontend
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
+          context: .
+          file: frontend/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
@@ -51,54 +59,78 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
           cache-to: type=inline
 
+  
+  copy-init-sql:
+      runs-on: ubuntu-latest
+      needs: build-and-push
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v4
 
-  copy-files:
-    runs-on: ubuntu-latest
-    needs: build-and-push
+        - name: Ensure target directory exists on VM
+          uses: appleboy/ssh-action@v1.0.3
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              cd /
+              sudo mkdir -p /opt/lemp/db/init/
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        - name: Set permissions for /opt/lemp/db/init/
+          uses: appleboy/ssh-action@v1.0.3
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              sudo chown -R $(whoami) /opt/lemp/db/init/
+              sudo chmod -R u+w /opt/lemp/db/init/
 
-      - name: Prepare /opt/lemp/db/init directory
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          script: |
-            sudo mkdir -p /opt/lemp/db/init
-            sudo chown -R $(whoami) /opt/lemp/db/init
-            sudo chmod -R u+w /opt/lemp/db/init
+        - name: Copy init.sql to VM
+          uses: appleboy/scp-action@v0.1.4
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            source: db/init/init.sql
+            target: /opt/lemp/db/init/
+            strip_components: 2
 
-      - name: Copy init.sql
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          source: db/init/init.sql
-          target: /opt/lemp/db/init/
+        
 
-      - name: Copy docker-compose.prod.yml
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          source: docker-compose.prod.yml
-          target: /opt/lemp/docker-compose.yml
+        - name: Copy docker-compose.prod.yml to VM
+          uses: appleboy/scp-action@v0.1.4
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            source: docker-compose.prod.yml
+            target: /tmp/
 
+        - name: Move docker-compose.prod.yml to /opt/lemp/ on VM
+          uses: appleboy/ssh-action@v1.0.3
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              sudo cp /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
+            
 
   deploy:
     runs-on: ubuntu-latest
-    needs: copy-files
-
+    needs: copy-init-sql
     steps:
-      - name: Deploy to server
+    
+  
+
+      - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -108,14 +140,13 @@ jobs:
           script: |
             set -e
             cd /opt/lemp
-
-            # Stop running containers
-            docker-compose down || true
-
-            # Pull latest images
+            
+            if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
+              docker-compose down -v
+            else
+              docker-compose down
+            fi
+ 
             docker-compose pull
-
-            # Start updated stack
             docker-compose up -d
-
             docker-compose ps
