--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,19 @@
 events {}
+
 http {
   server {
     listen 80;
     server_name _;
 
-    location / {
-      root   /usr/share/nginx/html;
-      index  index.html;
-      try_files $uri /index.html;
+    # Frontend toimii polussa /cicd/
+    location /cicd/ {
+      alias /usr/share/nginx/html/;
+      try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-      proxy_pass http://backend:8000;
+    # API-kutsut
+    location /cicd/api/ {
+      proxy_pass http://backend:8000/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,4 +21,3 @@ http {
     }
   }
 }
-
