--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,14 +5,15 @@ http {
     listen 80;
     server_name _;
 
-    # Frontend toimii polussa /cicd/
-    location /cicd/ {
-      alias /usr/share/nginx/html/;
-      try_files $uri $uri/ /index.html;
+    # SPA-frontend kontissa
+    location / {
+      root   /usr/share/nginx/html;
+      index  index.html;
+      try_files $uri /index.html;
     }
 
-    # API-kutsut
-    location /cicd/api/ {
+    # API-proxy backend-konttiin
+    location /api/ {
       proxy_pass http://backend:8000/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
