--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,45 +1,53 @@
-version: "3.9"
+version: '3.8'
 
 services:
   db:
     image: mysql:8.4
+    command: --default-authentication-plugin=mysql_native_password
+    restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: supersecretroot
+      MYSQL_DATABASE: appdb
+      MYSQL_USER: appuser
+      MYSQL_PASSWORD: changeme
     volumes:
       - db_data:/var/lib/mysql
-      - ./db/init:/docker-entrypoint-initdb.d:ro
-    networks:
-      - backend_frontend_net
+      - ./db/init/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    networks:
+      - net
 
   backend:
     image: ${DOCKERHUB_USERNAME}/lemp-backend:latest
+    restart: unless-stopped
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_NAME: ${DB_NAME}
-    networks:
-      - backend_frontend_net
+      DB_HOST: db
+      DB_USER: appuser
+      DB_PASSWORD: changeme
+      DB_NAME: appdb
     depends_on:
       db:
         condition: service_healthy
+    expose:
+      - "8000"                    # vain sisäisesti, ei ports:
+    networks:
+      - net
 
   frontend:
     image: ${DOCKERHUB_USERNAME}/lemp-frontend:latest
+    restart: unless-stopped
+    # ei ports: – hostin Nginx hoitaa kaiken
     networks:
-      - backend_frontend_net
-    depends_on:
-      - backend
-    ports:
-      - "8001:80"   # host: 8001 -> kontti: 80
+      - net
 
 volumes:
   db_data:
 
 networks:
-  backend_frontend_net:
+  net:
+    name: lemp_backend_frontend_net
+    driver: bridge
