--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,6 +140,8 @@ jobs:
           script: |
             set -e
             cd /opt/lemp
+
+            docker rm -f cicd-backend || true
             
             if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
               docker-compose down -v
