--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: CI/CD for LEMP Containers
 on:
   push:
     branches: [ main ]
-    tags:     [ 'v*' ]  # optional: run on version tags, e.g., v1.0.0 #- name: Run backend tests
-                              #  run: python backend/test_app.py
+    tags: [ 'v*' ]
 
 jobs:
   build-and-push:
@@ -12,6 +11,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,10 +21,8 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install backend dependencies
+      - name: Install backend dependencies (for potential tests)
         run: pip install -r backend/requirements.txt
-
-      
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -59,103 +57,103 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
           cache-to: type=inline
 
-  
+
   copy-init-sql:
-      runs-on: ubuntu-latest
-      needs: build-and-push
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Ensure target directory exists on VM
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              cd /
-              sudo mkdir -p /opt/lemp/db/init/
+      - name: Ensure target directory exists on VM
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            sudo mkdir -p /opt/lemp/db/init/
 
-        - name: Set permissions for /opt/lemp/db/init/
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              sudo chown -R $(whoami) /opt/lemp/db/init/
-              sudo chmod -R u+w /opt/lemp/db/init/
+      - name: Set permissions for init directory
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            sudo chown -R $(whoami):$(whoami) /opt/lemp/db/init/
+            sudo chmod -R 755 /opt/lemp/db/init/
 
-        - name: Copy init.sql to VM
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            source: db/init/init.sql
-            target: /opt/lemp/db/init/
-            strip_components: 2
+      - name: Copy init.sql to VM
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: db/init/init.sql
+          target: /opt/lemp/db/init/
+          strip_components: 2
 
-        
+      - name: Copy docker-compose.prod.yml to VM
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: docker-compose.prod.yml
+          target: /tmp/
 
-        - name: Copy docker-compose.prod.yml to VM
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            source: docker-compose.prod.yml
-            target: /tmp/
+      - name: Move docker-compose.prod.yml → docker-compose.yml
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            sudo mv /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
 
-        - name: Move docker-compose.prod.yml to /opt/lemp/ on VM
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              sudo cp /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
-            
 
   deploy:
     runs-on: ubuntu-latest
     needs: copy-init-sql
     steps:
-    
-        - name: Copy .env.production to server
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            source: .env.production
-            target: /opt/lemp/
-
-        - name: Deploy to VM via SSH
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-           host: ${{ secrets.SSH_HOST }}
-           username: ${{ secrets.SSH_USER }}
-           key: ${{ secrets.SSH_KEY }}
-           port: 22
-           script: |
+      - name: Deploy to VM – create .env + start stack
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          envs: MYSQL_ROOT_PASSWORD,MYSQL_APP_PASSWORD,DOCKERHUB_USERNAME
+          script: |
             set -e
             cd /opt/lemp
 
-            docker rm -f cicd-backend || true
-            
+            # Poista mahdollinen käsin luotu kontti
+            docker rm -f cicd-backend 2>/dev/null || true
+
+            # Luo .env.production suoraan GitHub Secretsistä
+            cat > .env.production << EOF
+            MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
+            MYSQL_APP_PASSWORD=${{ secrets.MYSQL_APP_PASSWORD }}
+            DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+            EOF
+
+            # Pysäytä vanha stacki
             if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
               docker-compose down -v
             else
               docker-compose down
             fi
- 
+
+            # Vedä uudet imaget ja käynnistä
             docker-compose pull
             docker-compose up -d
+
+            echo "Deployment complete!"
             docker-compose ps
