--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -134,7 +134,7 @@ jobs:
             set -e
             cd /opt/lemp
 
-            # Poista mahdollinen käsin luotu kontti
+            # Poista käsin luotu kontti (ei kaada workflowta jos ei ole)
             docker rm -f cicd-backend 2>/dev/null || true
 
             # Luo .env.production suoraan GitHub Secretsistä
@@ -151,9 +151,9 @@ jobs:
               docker-compose down
             fi
 
-            # Vedä uudet imaget ja käynnistä
+            # Käynnistä uusilla imageilla
             docker-compose pull
-            docker-compose up -d
+            docker-compose up -d --remove-orphans
 
             echo "Deployment complete!"
             docker-compose ps
