--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,32 +118,37 @@ jobs:
             sudo mv /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
 
 
-    deploy:
+      deploy:
     runs-on: ubuntu-latest
     needs: copy-init-sql
     steps:
       - name: Deploy to VM – create .env + start stack
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          MYSQL_APP_PASSWORD: ${{ secrets.MYSQL_APP_PASSWORD }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          # <-- TÄMÄ ON OIKEA TAPA VÄLITTÄÄ SALAISUUDET
           envs: MYSQL_ROOT_PASSWORD,MYSQL_APP_PASSWORD,DOCKERHUB_USERNAME
           script: |
             set -e
             cd /opt/lemp
 
+            # Poista käsin luodut kontit
             docker rm -f cicd-backend 2>/dev/null || true
 
-            # KÄYTÄ SUORAAN SALAISUUKSIA – NE OVAT JO SSH-SKriptissä ympäristömuuttujina
+            # Luo .env.production salaisuuksista
             cat > .env.production << EOF
             MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
             MYSQL_APP_PASSWORD=$MYSQL_APP_PASSWORD
             DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME
             EOF
 
+            # Pysäytä vanha stacki
             if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
               docker-compose down -v
             else
@@ -155,7 +160,3 @@ jobs:
 
             echo "Deployment complete!"
             docker-compose ps
-        env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-          MYSQL_APP_PASSWORD: ${{ secrets.MYSQL_APP_PASSWORD }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
