--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,28 +11,22 @@ jobs:
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Install backend dependencies (for potential tests)
+      - name: Install backend dependencies
         run: pip install -r backend/requirements.txt
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build & push backend
         uses: docker/build-push-action@v5
         with:
@@ -44,7 +38,6 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:latest
           cache-to: type=inline
-
       - name: Build & push frontend
         uses: docker/build-push-action@v5
         with:
@@ -57,14 +50,12 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
           cache-to: type=inline
 
-
   copy-init-sql:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Ensure target directory exists on VM
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -72,9 +63,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          script: |
-            sudo mkdir -p /opt/lemp/db/init/
-
+          script: sudo mkdir -p /opt/lemp/db/init/
       - name: Set permissions for init directory
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -85,7 +74,6 @@ jobs:
           script: |
             sudo chown -R $(whoami):$(whoami) /opt/lemp/db/init/
             sudo chmod -R 755 /opt/lemp/db/init/
-
       - name: Copy init.sql to VM
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -96,7 +84,6 @@ jobs:
           source: db/init/init.sql
           target: /opt/lemp/db/init/
           strip_components: 2
-
       - name: Copy docker-compose.prod.yml to VM
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -106,7 +93,6 @@ jobs:
           port: 22
           source: docker-compose.prod.yml
           target: /tmp/
-
       - name: Move docker-compose.prod.yml → docker-compose.yml
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -114,11 +100,9 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: 22
-          script: |
-            sudo mv /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
+          script: sudo mv /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
 
-
-      deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs: copy-init-sql
     steps:
@@ -131,32 +115,3 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          envs: MYSQL_ROOT_PASSWORD,MYSQL_APP_PASSWORD,DOCKERHUB_USERNAME
-          script: |
-            set -e
-            cd /opt/lemp
-
-            # Poista käsin luodut kontit
-            docker rm -f cicd-backend 2>/dev/null || true
-
-            # Luo .env.production salaisuuksista
-            cat > .env.production << EOF
-            MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
-            MYSQL_APP_PASSWORD=$MYSQL_APP_PASSWORD
-            DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME
-            EOF
-
-            # Pysäytä vanha stacki
-            if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
-              docker-compose down -v
-            else
-              docker-compose down
-            fi
-
-            docker-compose pull
-            docker-compose up -d --remove-orphans
-
-            echo "Deployment complete!"
-            docker-compose ps
