--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: CI/CD for LEMP Containers
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]
+    tags:     [ 'v*' ]  # optional: run on version tags, e.g., v1.0.0 #- name: Run backend tests
+                              #  run: python backend/test_app.py
 
 jobs:
   build-and-push:
@@ -14,19 +15,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
       - name: Install backend dependencies
         run: pip install -r backend/requirements.txt
+
+      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build & push backend
         uses: docker/build-push-action@v5
         with:
@@ -38,6 +46,7 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-backend:latest
           cache-to: type=inline
+
       - name: Build & push frontend
         uses: docker/build-push-action@v5
         with:
@@ -50,21 +59,78 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
           cache-to: type=inline
 
+  
   copy-init-sql:
+      runs-on: ubuntu-latest
+      needs: build-and-push
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v4
+
+        - name: Ensure target directory exists on VM
+          uses: appleboy/ssh-action@v1.0.3
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              cd /
+              sudo mkdir -p /opt/lemp/db/init/
+
+        - name: Set permissions for /opt/lemp/db/init/
+          uses: appleboy/ssh-action@v1.0.3
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              sudo chown -R $(whoami) /opt/lemp/db/init/
+              sudo chmod -R u+w /opt/lemp/db/init/
+
+        - name: Copy init.sql to VM
+          uses: appleboy/scp-action@v0.1.4
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            source: db/init/init.sql
+            target: /opt/lemp/db/init/
+            strip_components: 2
+
+        
+
+        - name: Copy docker-compose.prod.yml to VM
+          uses: appleboy/scp-action@v0.1.4
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            source: docker-compose.prod.yml
+            target: /tmp/
+
+        - name: Move docker-compose.prod.yml to /opt/lemp/ on VM
+          uses: appleboy/ssh-action@v1.0.3
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USER }}
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              sudo cp /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
+            
+
+  deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: copy-init-sql
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Ensure target directory exists on VM
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          script: sudo mkdir -p /opt/lemp/db/init/
-      - name: Set permissions for init directory
+    
+  
+
+      - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -72,46 +138,15 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22
           script: |
-            sudo chown -R $(whoami):$(whoami) /opt/lemp/db/init/
-            sudo chmod -R 755 /opt/lemp/db/init/
-      - name: Copy init.sql to VM
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          source: db/init/init.sql
-          target: /opt/lemp/db/init/
-          strip_components: 2
-      - name: Copy docker-compose.prod.yml to VM
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          source: docker-compose.prod.yml
-          target: /tmp/
-      - name: Move docker-compose.prod.yml → docker-compose.yml
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          script: sudo mv /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: copy-init-sql
-    steps:
-      - name: Deploy to VM – create .env + start stack
-        uses: appleboy/ssh-action@v1.0.3
-        env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-          MYSQL_APP_PASSWORD: ${{ secrets.MYSQL_APP_PASSWORD }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
+            set -e
+            cd /opt/lemp
+            
+            if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
+              docker-compose down -v
+            else
+              docker-compose down
+            fi
+ 
+            docker-compose pull
+            docker-compose up -d
+            docker-compose ps
